@@ -1,4 +1,8 @@
 
+2018-05-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* configure.ac [AC_CHECK_FUNCS} removed unused strxfrm, added popen
+
 2018-04-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* configure.ac: removed use of line breaks in sysout from C
